force-app/main/default/objects/VisualAntidote__FastFormsAuth__c/fields/VisualAntidote__Instance_Url__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Instance_Url__c</fullName>
    <label>Instance Url</label>
    <type>Url</type>
</CustomField>