force-app/main/default/objects/VisualAntidote__FastFormsAuth__c/fields/VisualAntidote__ReCaptcha_Site_Key__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__ReCaptcha_Site_Key__c</fullName>
    <label>ReCaptcha Site Key</label>
    <type>TextArea</type>
</CustomField>