force-app/main/default/objects/VisualAntidote__FastFormsAuth__c/fields/VisualAntidote__Use_Custom_Domain__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Use_Custom_Domain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Custom Domain</label>
    <type>Checkbox</type>
</CustomField>